# SIN-Code-Proof-of-Correctness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  USAGE.md
src/sin_code_poc/: __init__.py  __init__.py.doc.md  cli.py  generator.py  generator.py.doc.md  mcp_server.doc.md  mcp_server.py  mcp_server.py.doc.md  proof.py  proof.py.doc.md  properties.py  properties.py.doc.md  property_generator.py  report.doc.md  report.py  report.py.doc.md  runtime_verifier.py  spec_compiler.py  verifier.py  verifier.py.doc.md
src/sin_code_poc/strategies/: __init__.py  __init__.py.doc.md  symbolic.py  symbolic.py.doc.md  testing.py  testing.py.doc.md  typecheck.py  typecheck.py.doc.md
tests/: test_poc.py  test_property.py
