[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-code-poc"
version = "0.1.0"
description = "Lightweight Formal Verification for AI-Generated Code"
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6.90",
    "typer>=0.9.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
poc = "sin_code_poc.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
