[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-code-poc"
version = "0.1.0"
description = "Multi-strategy proof-of-correctness for Python functions (symbolic, testing, typecheck)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SIN-Code", email = "contact@sin-code.dev" }]
keywords = ["formal-verification", "proof-of-correctness", "sympy", "hypothesis", "mypy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "sympy>=1.12",
    "hypothesis>=6.0",
    "mypy>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
